--- a/Server/assets/jst/system-quick-health.html
+++ b/Server/assets/jst/system-quick-health.html
@@ -26,9 +26,13 @@
 <!-- XXX most recent note? most recent power failure output? -->
 <p>
 <% if (can_change_status && (status == 'Broken' || status == 'Removed')) { %>
-  <a href="#IMPLEMENTME" class="btn btn-block">Return to service</a>
+  <!-- For now we don't know whether the status is supposed to be set back to 
+  Automated or Manual, so we just punt and show the Scheduler Configuration tab 
+  and let the user figure it out. But ideally, this would be a one-click 
+  operation to mark a system as unbroken. -->
+  <a href="#scheduler" class="btn btn-block">Return to service</a>
 <% } else if (can_change_status) { %>
-  <a href="#IMPLEMENTME" class="btn btn-block">Remove from service</a>
+  <a href="#scheduler" class="btn btn-block">Remove from service</a>
 <% } else if (_.isEmpty(window.beaker_current_user)) { %>
   <button type="button" class="btn btn-block" disabled="disabled">Not logged in</button>
 <% } else if (status != 'Broken' && status != 'Removed') { %>
