Provision tab on system page now always provisions directly
Also ported it to Backbone.

This is a second attempt at the final solution for bug 855333. That bug
was ultimately caused by the various ways that the Provision tab changed
its behaviour according to the state of the system.

Now the Provision tab always provisions directly, not through the
scheduler (we can link to the Reserve Workflow for that now). It always
appears regardless of the Automated/Manual status of the system. The tab
will be available whenever the user is allowed to provision the system:
typically, while they have reserved it or if they are its owner (or
granted in its access policy).

Change-Id: I5839e33fb60c6404302d0c21bc9d4c40870a5070

--- a/Server/assets/jst/distro-picker.html
+++ b/Server/assets/jst/distro-picker.html
@@ -1,4 +1,8 @@
 <legend>Distro</legend>
+<% if (system) { %>
+  <input type="hidden" class="distro_filter_criterion distro_tree_filter_criterion"
+      name="system" value="<%- system %>" />
+<% } %>
 <div class="control-group">
   <label class="control-label" for="osmajor">Family</label>
   <div class="controls">
@@ -40,7 +44,9 @@
 <div class="control-group">
   <label class="control-label" for="distro_tree_id">Distro Tree</label>
   <div class="controls">
-    <select size="7" multiple id="distro_tree_id" name="distro_tree_id" class="input-xxlarge">
+    <select id="distro_tree_id" name="distro_tree_id" class="input-xxlarge"
+        <% if (this.multiple) { %>multiple size="7"<% } %>
+        >
       <% _.each(distro_trees, function (distro_tree) { %>
         <option value="<%- distro_tree[0] %>"
             <% if (_.contains(selection.get('distro_tree_id'), distro_tree[0])) { %>selected<% } %>
