--- a/Server/assets/jst/system-quick-usage.html
+++ b/Server/assets/jst/system-quick-usage.html
@@ -30,9 +30,9 @@
 <% } %>
 <p>
   <% if (can_return) { %>
-    <a href="#IMPLEMENTME" class="btn btn-block">Return</a>
+    <button type="button" class="btn btn-block return">Return</button>
   <% } else if (can_take) { %>
-    <a href="#IMPLEMENTME" class="btn btn-block">Take</a>
+    <button type="button" class="btn btn-block take">Take</button>
   <% } else if (can_borrow) { %>
     <button type="button" class="btn btn-block borrow">Borrow</button>
   <% } else if (can_reserve) { %>
