--- a/Server/assets/jst/system-quick-usage.html
+++ b/Server/assets/jst/system-quick-usage.html
@@ -40,6 +40,6 @@
   <% } else if (_.isEmpty(window.beaker_current_user)) { %>
     <button type="button" class="btn btn-block" disabled="disabled">Not logged in</button>
   <% } else { %>
-    <a href="#IMPLEMENTME" class="btn btn-block">Request loan</a>
+    <button type="button" class="btn btn-block request-loan">Request loan</button>
   <% } %>
 </p>
