ported Power Configuration tab to Backbone
Bug: 1070036
Bug: 1059535
Change-Id: I6951704b977da9a444fcbea7d38557487464b315

--- a/Server/assets/jst/reserve-workflow.html
+++ b/Server/assets/jst/reserve-workflow.html
@@ -1,5 +1,8 @@
 <form class="form-horizontal">
-  <fieldset class="distro-picker"/>
+  <fieldset>
+    <legend>Distro</legend>
+    <div class="distro-picker"></div>
+  </fieldset>
   <fieldset class="system-picker">
     <legend>System</legend>
     <div class="control-group">
