--- a/Server/assets/jst/system-provision.html
+++ b/Server/assets/jst/system-provision.html
@@ -26,7 +26,10 @@
     <% } %>
   </div>
   <form class="form-horizontal system-provision">
-    <fieldset class="distro-picker"/>
+    <fieldset>
+      <legend>Distro</legend>
+      <div class="distro-picker"></div>
+    </fieldset>
     <fieldset class="install-options">
       <legend>Install Options</legend>
       <p>These options will augment the defaults configured for this system and 
