rename some system page tabs, in an attempt to make things clearer
    Commands -> Power
    Power -> Power Settings
    Scheduler -> Scheduler Settings

It was not obvious from the name "Commands" that this means power
control. The "Power" tab under "Configuration" was also too tempting
a target when looking for power controls. This attempts to make things
a bit more obvious.

Change-Id: If591e2101b01a89d5d127b82b79ca6d3896ce98f

--- a/Server/assets/jst/system-quick-health.html
+++ b/Server/assets/jst/system-quick-health.html
@@ -27,12 +27,12 @@
 <p>
 <% if (can_change_status && (status == 'Broken' || status == 'Removed')) { %>
   <!-- For now we don't know whether the status is supposed to be set back to 
-  Automated or Manual, so we just punt and show the Scheduler Configuration tab 
+  Automated or Manual, so we just punt and show the Scheduler Settings tab 
   and let the user figure it out. But ideally, this would be a one-click 
   operation to mark a system as unbroken. -->
-  <a href="#scheduler" class="btn btn-block">Return to service</a>
+  <a href="#scheduler-settings" class="btn btn-block">Return to service</a>
 <% } else if (can_change_status) { %>
-  <a href="#scheduler" class="btn btn-block">Remove from service</a>
+  <a href="#scheduler-settings" class="btn btn-block">Remove from service</a>
 <% } else if (_.isEmpty(window.beaker_current_user)) { %>
   <button type="button" class="btn btn-block" disabled="disabled">Not logged in</button>
 <% } else if (status != 'Broken' && status != 'Removed') { %>
