--- a/Server/assets/jst/system-power-settings.html
+++ b/Server/assets/jst/system-power-settings.html
@@ -71,9 +71,11 @@
       </div>
     </div>
   </div>
+  <% if (!readonly) { %>
   <div class="form-actions">
     <button type="submit" class="btn btn-primary">Save Changes</button>
     <button type="reset" class="btn">Revert</button>
     <span class="sync-status"></span>
   </div>
+  <% } %>
 </form>
