--- a/Server/assets/jst/backgrid-filter.html
+++ b/Server/assets/jst/backgrid-filter.html
@@ -1,1 +1,4 @@
-<input type="search" class="search-query" />
+<div class="input-append">
+  <input type="search" class="search-query" />
+  <button type="button" class="btn trigger-query-builder">Build Query</button>
+</div>
