Fix modal behavior upon HTTP error
Bug: 1144203
Change-Id: I1425f0ed7ece2fbb86dcab60a58259af4b331058

--- a/Server/assets/jst/system-add-cc.html
+++ b/Server/assets/jst/system-add-cc.html
@@ -1,6 +1,6 @@
 <form class="cc-add">
   <div class="input-append">
     <input name="cc" type="email" placeholder="E-mail address" />
-    <button class="btn" type="submit"><i class="fa fa-plus"></i> Add</button>
+    <button class="btn" type="submit" data-loading-text="<i class='fa fa-spinner fa-plus'></i> Adding&hellip;"><i class="fa fa-plus"></i> Add</button>
   </div>
 </form>
