--- a/Server/assets/jst/system-hardware-essentials.html
+++ b/Server/assets/jst/system-hardware-essentials.html
@@ -48,7 +48,7 @@
   </div>
   <% if (can_change_hardware) { %>
     <div class="form-actions">
-      <button type="submit" class="btn btn-primary">Save Changes</button>
+      <button type="submit" class="btn btn-primary" data-loading-text="<i class='fa fa-spinner fa-spin'></i>Saving&hellip;">Save Changes</button>
       <button type="reset" class="btn">Revert</button>
       <span class="sync-status"></span>
     </div>
