--- a/Server/assets/jst/system-hardware-details-edit.html
+++ b/Server/assets/jst/system-hardware-details-edit.html
@@ -28,7 +28,7 @@
   <input type="number" step="1" id="numa_nodes" name="numa_nodes"/>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn" data-dismiss="modal">Cancel</button>
-  <button type="submit" class="btn btn-primary">Save changes</button>
+  <button type="button" class="btn" data-dismiss="modal" data-loading-text="Cancel">Cancel</button>
+  <button type="submit" class="btn btn-primary" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Saving&hellip;">Save changes</button>
 </div>
 </form>
