--- a/Server/assets/jst/system-lend.html
+++ b/Server/assets/jst/system-lend.html
@@ -12,7 +12,7 @@
   to all users. You can use it to record the purpose of this loan.</span>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn" data-dismiss="modal">Cancel</button>
-  <button type="submit" class="btn btn-primary">Save changes</button>
+  <button type="button" class="btn" data-dismiss="modal" data-loading-text="Cancel">Cancel</button>
+  <button type="submit" class="btn btn-primary" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Saving&hellip;">Save changes</button>
 </div>
 </form>
