--- a/Server/assets/jst/system-loan-request.html
+++ b/Server/assets/jst/system-loan-request.html
@@ -10,7 +10,7 @@
   request to the system owner.</span>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn" data-dismiss="modal">Cancel</button>
-  <button type="submit" class="btn btn-primary">Request</button>
+  <button type="button" class="btn" data-dismiss="modal" data-loading-text="Cancel">Cancel</button>
+  <button type="submit" class="btn btn-primary" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Requesting&hellip;">Request</button>
 </div>
 </form>
