--- a/Server/assets/jst/system-loan.html
+++ b/Server/assets/jst/system-loan.html
@@ -11,13 +11,13 @@
 <% } %>
 <div class="btn-group">
   <% if (can_borrow) { %>
-    <button type="button" class="btn borrow" title="Lend this system to yourself">Borrow</button>
+    <button type="button" class="btn borrow" title="Lend this system to yourself" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Borrowing&hellip;">Borrow</button>
   <% } %>
   <% if (can_lend) { %>
-    <button type="button" class="btn lend">Lend</button>
+    <button type="button" class="btn lend" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Lending&hellip;">Lend</button>
   <% } %>
   <% if (can_return_loan) { %>
-    <button type="button" class="btn return">Return Loan</button>
+    <button type="button" class="btn return" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Returning&hellip;">Return Loan</button>
   <% } %>
   <% if (!can_borrow && !can_lend && !can_return_loan && window.beaker_current_user) { %>
     <button type="button" class="btn request-loan">Request Loan</button>
