--- a/Server/assets/jst/system-report-problem.html
+++ b/Server/assets/jst/system-report-problem.html
@@ -10,7 +10,7 @@
     report to the system owner.</span>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn" data-dismiss="modal">Cancel</button>
-    <button type="submit" class="btn btn-primary">Report</button>
+    <button type="button" class="btn" data-dismiss="modal" data-loading-text="Cancel">Cancel</button>
+    <button type="submit" class="btn btn-primary" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Sending&hellip;">Report</button>
   </div>
 </form>
