preserve backwards compatibility in /systems/<FQDN>/status API
I also realised we need to revert the client to use the old API for now,
otherwise the client will break when talking to older servers.

Bug: 1145479
Change-Id: Id9769e789921c2cceb436c137925baff5d47c934

--- a/Server/assets/jst/system-loan.html
+++ b/Server/assets/jst/system-loan.html
@@ -1,7 +1,7 @@
 <% if (!_.isEmpty(current_loan)) { %>
   <p>
     The system is currently loaned to
-    <a href="mailto:<%- current_loan.get('recipient').get('email_address') %>" title="<%- current_loan.get('recipient').get('display_name') %> &lt;<%- current_loan.get('recipient').get('email_address') %>&gt;"><%- current_loan.get('recipient').get('user_name') %></a>.
+    <a href="mailto:<%- current_loan.get('recipient_user').get('email_address') %>" title="<%- current_loan.get('recipient_user').get('display_name') %> &lt;<%- current_loan.get('recipient_user').get('email_address') %>&gt;"><%- current_loan.get('recipient_user').get('user_name') %></a>.
   </p>
   <% if (current_loan.get('comment')) { %>
   <p class="system-loan-comment"><%- current_loan.get('comment') %></p>
