upgrade to FontAwesome 4.2.0
https://github.com/FortAwesome/Font-Awesome/wiki/Upgrading-from-3.2.1-to-4

Change-Id: I2d89a7deda268fdc4492c03689dcf7db58aec77d

--- a/Server/assets/jst/query-builder-row.html
+++ b/Server/assets/jst/query-builder-row.html
@@ -16,4 +16,4 @@
   <option value="!null">is not null</option>
 </select>
 <input type="text" name="value"/>
-<a href="#" class="remove"><i class="icon-remove-sign" /></a>
+<a href="#" class="remove"><i class="fa fa-times-circle-o" /></a>
