--- a/Server/assets/jst/query-builder.html
+++ b/Server/assets/jst/query-builder.html
@@ -8,7 +8,7 @@
     <div class="bool-operator">AND</div>
     <div class="query-builder-rows"></div>
     <div class="query-builder-row">
-      <a href="#" class="add"><i class="icon-plus-sign"></i></a>
+      <a href="#" class="add"><i class="fa fa-plus-circle"></i></a>
     </div>
   </div>
   <div class="modal-footer">
