--- a/Server/assets/jst/system-access-policy.html
+++ b/Server/assets/jst/system-access-policy.html
@@ -18,7 +18,7 @@
           <td colspan="<%- possible_permissions.length + 1 %>">
             <div class="input-append">
               <input type="text" id="access-policy-group-input" placeholder="Group name" />
-              <button class="btn add" type="button"><i class="icon-plus"></i> Add</button>
+              <button class="btn add" type="button"><i class="fa fa-plus"></i> Add</button>
             </div>
           </td>
         </tr>
@@ -34,7 +34,7 @@
           <td colspan="<%- possible_permissions.length + 1 %>">
             <div class="input-append">
               <input type="text" id="access-policy-user-input" placeholder="Username" />
-              <button class="btn add" type="button"><i class="icon-plus"></i> Add</button>
+              <button class="btn add" type="button"><i class="fa fa-plus"></i> Add</button>
             </div>
           </td>
         </tr>
