--- a/Server/assets/jst/system-hardware-details.html
+++ b/Server/assets/jst/system-hardware-details.html
@@ -10,7 +10,7 @@
 <h3>
   System
   <% if (can_change_hardware) { %>
-    <button type="button" class="btn edit"><i class="icon-edit"></i> Edit</button>
+    <button type="button" class="btn edit"><i class="fa fa-pencil-square-o"></i> Edit</button>
   <% } %>
 </h3>
 <table class="table table-bordered" style="max-width: 30em;">
