--- a/Server/assets/jst/system-provision.html
+++ b/Server/assets/jst/system-provision.html
@@ -16,7 +16,7 @@
   </p>
 <% } else { %>
   <div class="alert alert-warning">
-    <h4><i class="icon-warning-sign"></i> Caution</h4>
+    <h4><i class="fa fa-exclamation-triangle"></i> Caution</h4>
     Provisioning this system will install a new operating system as soon as the 
     system is rebooted, and <em>all data stored on the system will be lost</em>.
     <% if (status == "Automated") { %>
