--- a/Server/assets/jst/system-add-cc.html
+++ b/Server/assets/jst/system-add-cc.html
@@ -1,6 +1,6 @@
 <form class="cc-add">
   <div class="input-append">
     <input name="cc" type="email" placeholder="E-mail address" />
-    <button class="btn" type="submit"><i class="icon-plus"></i> Add</button>
+    <button class="btn" type="submit"><i class="fa fa-plus"></i> Add</button>
   </div>
 </form>
