'control_system' permission does not imply permission to provision
We need an extra permission checking method to cover provisioning (that
is, the 'configure_netboot' command) particularly, rather than just
checking that power commands can be executed.

This basically matches the historical (pre-19) behaviour where "direct"
provisioning was only offered if you had reserved the system.

Bug: 1144196
Change-Id: I85c708be56b7d2188ef27527c3f3188ba1bb602b

--- a/Server/assets/jst/system-provision.html
+++ b/Server/assets/jst/system-provision.html
@@ -4,8 +4,8 @@
   <p>System must be associated to a lab controller in order to provision.</p>
 <% } else if (_.isEmpty(arches)) { %>
   <p>System must have at least one supported architecture defined in order to provision.</p>
-<% } else if (!can_power) { %>
-  <p>You do not have access to control this system.
+<% } else if (!can_configure_netboot) { %>
+  <p>You do not have access to provision this system.
   <% if (status == "Automated" && can_reserve) { %>
     To reserve this system through the scheduler, use the
     <a href="<%- beaker_url_prefix %>reserveworkflow/?system=<%- fqdn %>">Reserve Workflow</a>.
