only show scary warning on Provision tab if a recipe is running
Instead of always showing a big fat "Caution", which just causes extra
visual noise, we show a shorter and less obtrusive message only when the
system is running a recipe.

That is the only case where the behaviour in Beaker 19 will be different
than earlier versions (previously it would implicitly schedule a job
instead of provisioning) and it's also the only time where provisioning
is probably not what the user wants to do.

Also updated the confirmation box to match the wording from the power
confirmation box, in case the system is reserved by someone else.

Change-Id: I5aa4812da0118716f1c4f72a7248593e9927b445

--- a/Server/assets/jst/system-provision.html
+++ b/Server/assets/jst/system-provision.html
@@ -15,16 +15,15 @@
   <% } %>
   </p>
 <% } else { %>
-  <div class="alert alert-warning">
-    <h4><i class="fa fa-exclamation-triangle"></i> Caution</h4>
-    Provisioning this system will install a new operating system as soon as the 
-    system is rebooted, and <em>all data stored on the system will be lost</em>.
-    <% if (status == "Automated") { %>
+  <% if (current_reservation && current_reservation.get('type') == 'recipe') { %>
+    <div class="alert alert-warning">
+      <i class="fa fa-exclamation-triangle"></i>
       The currently running job will be interrupted.
       To reserve this system through the scheduler, use the
-      <a href="<%- beaker_url_prefix %>reserveworkflow/?system=<%- fqdn %>">Reserve Workflow</a>.
-    <% } %>
-  </div>
+      <a href="<%- beaker_url_prefix %>reserveworkflow/?system=<%- fqdn %>">Reserve Workflow</a>
+      instead.
+    </div>
+  <% } %>
   <form class="form-horizontal system-provision">
     <fieldset>
       <legend>Distro</legend>
