require non-empty power address
Every power script requires at least a power address, it doesn't make
sense not to have one. The power.power_address column is non-NULLable
for that reason. So we should also enforce that it's not the empty
string.

Bug: 1152887
Change-Id: Ia978ea74502ade2537d2c1175e28cfbeef4900ed

--- a/Server/assets/jst/system-power-settings.html
+++ b/Server/assets/jst/system-power-settings.html
@@ -12,7 +12,7 @@
   <div class="control-group">
     <label class="control-label" for="power_address">Power Address</label>
     <div class="controls">
-      <input type="text" id="power_address" name="power_address" />
+      <input type="text" id="power_address" name="power_address" required />
     </div>
   </div>
   <div class="control-group">
