prevent error boxes from stacking up in system page modals
Bug: 1161373
Change-Id: I59a468fb203ee650afb8e2f8848f99920ab89cff

--- a/Server/assets/jst/system-loan-request.html
+++ b/Server/assets/jst/system-loan-request.html
@@ -10,6 +10,7 @@
   request to the system owner.</span>
 </div>
 <div class="modal-footer">
+  <div class="sync-status"/>
   <button type="button" class="btn" data-dismiss="modal" data-loading-text="Cancel">Cancel</button>
   <button type="submit" class="btn btn-primary" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Requesting&hellip;">Request</button>
 </div>
