--- a/Server/assets/jst/system-rename.html
+++ b/Server/assets/jst/system-rename.html
@@ -11,6 +11,7 @@
         title="Fully-qualified domain name of up to 255 characters" />
   </div>
   <div class="modal-footer">
+    <div class="sync-status"/>
     <button type="button" class="btn" data-dismiss="modal" data-loading-text="Cancel">Cancel</button>
     <button type="submit" class="btn btn-primary" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Renaming&hellip;">Rename</button>
   </div>
