--- a/Server/assets/jst/system-owner-change.html
+++ b/Server/assets/jst/system-owner-change.html
@@ -7,6 +7,7 @@
     <input type="text" name="user_name" placeholder="Username" required />
   </div>
   <div class="modal-footer">
+    <div class="sync-status"/>
     <button type="button" class="btn" data-dismiss="modal" data-loading-text="Cancel">Cancel</button>
     <button type="submit" class="btn btn-primary" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Saving&hellip;">Save changes</button>
   </div>
