--- a/Server/assets/jst/system-report-problem.html
+++ b/Server/assets/jst/system-report-problem.html
@@ -10,6 +10,7 @@
     report to the system owner.</span>
   </div>
   <div class="modal-footer">
+    <div class="sync-status"/>
     <button type="button" class="btn" data-dismiss="modal" data-loading-text="Cancel">Cancel</button>
     <button type="submit" class="btn btn-primary" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Sending&hellip;">Report</button>
   </div>
