--- a/Server/assets/jst/system-power-settings.html
+++ b/Server/assets/jst/system-power-settings.html
@@ -73,9 +73,9 @@
   </div>
   <% if (!readonly) { %>
   <div class="form-actions">
-    <button type="submit" class="btn btn-primary">Save Changes</button>
-    <button type="reset" class="btn">Revert</button>
-    <span class="sync-status"></span>
+    <button type="submit" class="btn btn-primary" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Saving&hellip;">Save Changes</button>
+    <button type="reset" class="btn" data-loading-text="Revert">Revert</button>
   </div>
+  <div class="sync-status"></div>
   <% } %>
 </form>
