link to Reserve Workflow even when the user has permission to provision
Bug: 1173446
Change-Id: Ibeab47cbb5b4a201831d1627599dc3db53ac1cd4

--- a/Server/assets/jst/system-provision.html
+++ b/Server/assets/jst/system-provision.html
@@ -23,6 +23,11 @@
       <a href="<%- beaker_url_prefix %>reserveworkflow/?system=<%- fqdn %>">Reserve Workflow</a>
       instead.
     </div>
+  <% } else { %>
+    <div class="alert alert-info">
+      To reserve this system through the scheduler, use the
+      <a href="<%- beaker_url_prefix %>reserveworkflow/?system=<%- fqdn %>">Reserve Workflow</a>.
+    </div>
   <% } %>
   <form class="form-horizontal system-provision">
     <fieldset>
