--- a/Server/assets/jst/query-builder.html
+++ b/Server/assets/jst/query-builder.html
@@ -1,7 +1,7 @@
 <form class="form-inline">
   <div class="modal-header">
     <a href="#" class="close" data-dismiss="modal" aria-hidden="true">&times;</a>
-    <h3>Build query for system activity</h3>
+    <h3>Build query for <%- grid_name %></h3>
   </div>
   <div class="modal-body">
     <div class="query"></div>
