--- a/Server/assets/jst/backgrid-filter.html
+++ b/Server/assets/jst/backgrid-filter.html
@@ -1,4 +1,4 @@
 <div class="input-append">
-  <input type="search" class="search-query" />
+  <input type="search" class="search-query" value="<%- q %>" />
   <button type="button" class="btn trigger-query-builder">Build Query</button>
 </div>
