introduce new method .toHTML() on client-side models
This consolidates the logic for how to display a hyperlinked reference
to each object (system FQDN with link to system page, username with
mailto: link, etc). The Backgrid cell definitions can also use this to
render cell values.

Change-Id: I32d17ab7113e0183610e1d3c3c1d77482999fa20

--- a/Server/assets/jst/system-loan.html
+++ b/Server/assets/jst/system-loan.html
@@ -1,7 +1,6 @@
 <% if (!_.isEmpty(current_loan)) { %>
   <p>
-    The system is currently loaned to
-    <a href="mailto:<%- current_loan.get('recipient_user').get('email_address') %>" title="<%- current_loan.get('recipient_user').get('display_name') %> &lt;<%- current_loan.get('recipient_user').get('email_address') %>&gt;"><%- current_loan.get('recipient_user').get('user_name') %></a>.
+    The system is currently loaned to <%= current_loan.get('recipient_user').toHTML() %>.
   </p>
   <% if (current_loan.get('comment')) { %>
   <p class="system-loan-comment"><%- current_loan.get('comment') %></p>
